--- a/package.json
+++ b/package.json
@@ -5,8 +5,12 @@
   "author": "Marina <gma18@list.ru>",
   "license": "MIT",
   "dependencies": {
+    "axios": "^0.21.1",
+    "css-modules": "^0.3.0",
+    "normalize.css": "^8.0.1",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "typings-for-css-modules-loader": "^1.7.0"
   },
   "devDependencies": {
     "@babel/core": "^7.14.8",
