--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "axios": "^0.21.1",
     "css-modules": "^0.3.0",
+    "env-cmd": "^10.1.0",
     "normalize.css": "^8.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
