--- a/package.json
+++ b/package.json
@@ -5,12 +5,17 @@
   "author": "Marina <gma18@list.ru>",
   "license": "MIT",
   "dependencies": {
+    "@types/react-router-dom": "^5.1.8",
+    "@types/react-transition-group": "^4.4.2",
     "axios": "^0.21.1",
+    "classnames": "^2.3.1",
     "css-modules": "^0.3.0",
     "env-cmd": "^10.1.0",
     "normalize.css": "^8.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^5.2.0",
+    "react-transition-group": "^4.4.2",
     "typings-for-css-modules-loader": "^1.7.0"
   },
   "devDependencies": {
