--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@types/react-transition-group": "^4.4.2",
     "axios": "^0.21.1",
     "classnames": "^2.3.1",
+    "connect-history-api-fallback": "^1.6.0",
     "css-modules": "^0.3.0",
     "env-cmd": "^10.1.0",
     "normalize.css": "^8.0.1",
