--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "author": "Marina <gma18@list.ru>",
   "license": "MIT",
   "dependencies": {
+    "@reduxjs/toolkit": "^1.6.1",
+    "@types/react-redux": "^7.1.18",
     "@types/react-router-dom": "^5.1.8",
     "@types/react-transition-group": "^4.4.2",
     "axios": "^0.21.1",
@@ -15,6 +17,7 @@
     "normalize.css": "^8.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
     "react-transition-group": "^4.4.2",
     "typings-for-css-modules-loader": "^1.7.0"
